--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,9 @@
 <% provide :title, "OKARYO" %>
 
-<%= render 'products/header' %>
+<%= render 'shared/portfolio/header' %>
 
-<%= render 'products/footer' %>
+<%= render 'shared/portfolio/tab' %>
+
+<%= render 'products/main' %>
+
+<%= render 'shared/portfolio/footer' %>
