--- a/client/src/css/application.scss
+++ b/client/src/css/application.scss
@@ -1,3 +1,3 @@
 @import './reset.scss';
-@import './portfolio/**/**.scss';
-@import './portfolio/**/**/**.scss';
+@import './portfolio/**/*.scss';
+@import './portfolio/**/**/*.scss';
