[add] i am to profile

--- a/app/views/profiles/_main.html.erb
+++ b/app/views/profiles/_main.html.erb
@@ -1,2 +1,28 @@
-<div class="portfolio-l-main">
+<div class="portfolio-l-main portfolio-profile-p_menus">
+  <ul class="portfolio-profile-p_list_unit">
+    <h2 class="portfolio-profile-p_list_title">I am</h2>
+    <div class="portfolio-profile-p_list_container">
+      <img class="portfolio-profile-p_personal_img" src=<%= webpack_asset_path('images/oba.png') %> alt='personal image'>
+      <div class="portfolio-profile-p_personal_name">
+        <p>Offline Name: Ryotaro Oka</p>
+        <p>Online Name: okaryo / オカリヨ</p>
+      </div>
+    </div>
+  </ul>
+
+  <ul class="portfolio-profile-p_list_unit">
+    <h2 class="portfolio-profile-p_list_title">Experience</h2>
+  </ul>
+
+  <ul class="portfolio-profile-p_list_unit">
+    <h2 class="portfolio-profile-p_list_title">Education</h2>
+  </ul>
+
+  <ul class="portfolio-profile-p_list_unit">
+    <h2 class="portfolio-profile-p_list_title">Keywords</h2>
+  </ul>
+
+  <ul class="portfolio-profile-p_list_unit">
+    <h2 class="portfolio-profile-p_list_title">Social Activity</h2>
+  </ul>
 </div>
