[add] experience and education to profile

--- a/app/views/profiles/_main.html.erb
+++ b/app/views/profiles/_main.html.erb
@@ -12,10 +12,38 @@
 
   <ul class="portfolio-profile-p_list_unit">
     <h2 class="portfolio-profile-p_list_title">Experience</h2>
+    <ul class="portfolio-profile-p_experience_unit">
+      <li class="portfolio-profile-p_experience_main_text">Web engineer (Aug. 2019 - present)</li>
+      <li class="portfolio-profile-p_experience_sub_text">internship</li>
+    </ul>
+    <ul class="portfolio-profile-p_experience_unit">
+      <li class="portfolio-profile-p_experience_main_text">cram school teacher (May 2018 - Mar. 2019)</li>
+      <li class="portfolio-profile-p_experience_sub_text">part time job</li>
+    </ul>
+    <ul class="portfolio-profile-p_experience_unit">
+      <li class="portfolio-profile-p_experience_main_text">baker (May 2015 - Feb. 2017)</li>
+      <li class="portfolio-profile-p_experience_sub_text">part time job</li>
+    </ul>
   </ul>
 
   <ul class="portfolio-profile-p_list_unit">
     <h2 class="portfolio-profile-p_list_title">Education</h2>
+    <ul class="portfolio-profile-p_education_unit">
+      <li class="portfolio-profile-p_education_main_text">The University of Tokyo, Faculty of Law (Apr. 2018 - present)</li>
+      <li class="portfolio-profile-p_education_sub_text">DepartmentⅠ: General Legal Studies Course</li>
+    </ul>
+    <ul class="portfolio-profile-p_education_unit">
+      <li class="portfolio-profile-p_education_main_text">Taking a year off from university (Apr. 2017 - Mar. 2018)</li>
+      <li class="portfolio-profile-p_education_sub_text">Lost the meaning of life</li>
+    </ul>
+    <ul class="portfolio-profile-p_education_unit">
+      <li class="portfolio-profile-p_education_main_text">The University of Tokyo, Faculty of Arts and Sciences (Apr. 2015 - Mar. 2017)</li>
+      <li class="portfolio-profile-p_education_sub_text">Human Sciences Ⅰ</li>
+    </ul>
+    <ul class="portfolio-profile-p_education_unit">
+      <li class="portfolio-profile-p_education_main_text">SUNDAI Ochanomizu3 LB→LA (Apr. 2014 - Mar. 2015)</li>
+      <li class="portfolio-profile-p_education_sub_text">Ronin</li>
+    </ul>
   </ul>
 
   <ul class="portfolio-profile-p_list_unit">
