--- a/client/src/css/portfolio/object/project/profile.scss
+++ b/client/src/css/portfolio/object/project/profile.scss
@@ -6,6 +6,10 @@
   align-self: center;
   width: 60%;
   margin-bottom: 35px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 2px 1px rgba(161, 163, 162, 0.6);
 }
 .portfolio-profile-p_list_title {
   padding: .5em;
@@ -24,4 +28,24 @@
 .portfolio-profile-p_personal_name {
   display: inline-block;
   margin-left: 15px;
+}
+.portfolio-profile-p_experience_unit + .portfolio-profile-p_experience_unit {
+  margin-top: 15px;
+}
+.portfolio-profile-p_experience_main_text {
+  line-height: 20px;
+}
+.portfolio-profile-p_experience_sub_text {
+  line-height: 15px;
+  color: #BBBBBB;
+}
+.portfolio-profile-p_education_unit + .portfolio-profile-p_education_unit {
+  margin-top: 15px;
+}
+.portfolio-profile-p_education_main_text {
+  line-height: 20px;
+}
+.portfolio-profile-p_education_sub_text {
+  line-height: 15px;
+  color: #BBBBBB;
 }
