--- a/client/src/css/portfolio/object/project/profile.scss
+++ b/client/src/css/portfolio/object/project/profile.scss
@@ -1,13 +1,14 @@
 .portfolio-profile-p_menus {
   display: flex;
   flex-direction: column;
+  align-items: center;
+
 }
 .portfolio-profile-p_list_unit {
-  align-self: center;
   width: 60%;
+  padding: 20px;
   margin-bottom: 35px;
   background-color: #fff;
-  padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 2px 1px rgba(161, 163, 162, 0.6);
 }
@@ -48,4 +49,19 @@
 .portfolio-profile-p_education_sub_text {
   line-height: 15px;
   color: #BBBBBB;
+}
+.portfolio-main-p_portfolio_social_tag {
+  padding: 5px 10px;
+  background-color: rgb(199, 221, 202);
+  border-radius: 20px;
+  font-size: 16px;
+  margin-right: 10px;
+  margin-bottom: 5px;
+  display: inline-block;
+}
+.portfolio-main-p_portfolio_social_tag:hover {
+  background-color: rgb(133, 179, 139);
+}
+.portfolio-main-p_portfolio_social_tag_text {
+  display: inline-block;
 }
