--- a/client/src/css/portfolio/object/project/profile.scss
+++ b/client/src/css/portfolio/object/project/profile.scss
@@ -56,11 +56,16 @@
   border-radius: 20px;
   font-size: 16px;
   margin-right: 10px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   display: inline-block;
 }
 .portfolio-main-p_portfolio_social_tag:hover {
   background-color: rgb(133, 179, 139);
+}
+.portfolio-main-p_portfolio_social_tag_img {
+  width: 20px;
+  height: 20px;
+  vertical-align: -4px;
 }
 .portfolio-main-p_portfolio_social_tag_text {
   display: inline-block;
