--- a/client/src/css/portfolio/object/project/contact.scss
+++ b/client/src/css/portfolio/object/project/contact.scss
@@ -1,20 +1,19 @@
 .portfolio-contact-p_container {
+  max-width: 700px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin: 0 auto;
 }
 .portfolio-contact-p_item {
-  width: 60%;
+  width: 100%;
 }
 .portfolio-contact-p_top_text {
   font-weight: 300;
   margin: 20px 0;
   font-size: 24px;
   color: #565656;
-}
-.portfolio-contact-p_form_body {
-  max-width: 700px;
 }
 .portfolio-contact-p_form_body input, .portfolio-contact-p_form_body textarea {
   width: 100%;
