[add] link and card design

--- a/app/views/products/_main.html.erb
+++ b/app/views/products/_main.html.erb
@@ -3,19 +3,25 @@
     <% @products.each do |product| %>
       <div class="portfolio-main-p_product_unit">
         <img class="portfolio-main-p_product_img" src=<%= webpack_asset_path('images/' + product[:image_name] + '.png') %> alt=<%= product[:name] %>>
-        <div class="portfolio-main-p_product_text">
-          <p class="portfolio-main-p_product_name">
-            <%= product[:name] %>
-            <span class="portfolio-main-p_product_date"><%= product[:date] %></span>
-          </p>
-          <div class="portfolio-main-p_prodacut_tag_unit">
-            <% product[:tags].each do |tag| %>
-              <span class="portfolio-main-p_prodacut_tag"><%= tag %></span>
-            <% end %>
+        <div class="portfolio-main-p_product_menu">
+          <div class="portfolio-main-p_product_text">
+            <p class="portfolio-main-p_product_name">
+              <%= product[:name] %>
+              <span class="portfolio-main-p_product_date"><%= product[:date] %></span>
+            </p>
+            <p class="portfolio-main-p_prodacut_tag_unit">
+              <% product[:tags].each do |tag| %>
+                <span class="portfolio-main-p_prodacut_tag"><%= tag %></span>
+              <% end %>
+            </p>
+            <p class="portfolio-main-p_product_description"><%= product[:description] %></p>
           </div>
-          <p class="portfolio-main-p_product_description"><%= product[:description] %></p>
           <div class="portfolio-main-p_product_button_unit">
-            <%= link_to product[:link_url] do %>
+            <% if product[:external_link] %>
+              <%= link_to product[:link_url], target: :_blank, rel: :noopener do %>
+                <button class="portfolio-main-p_product_button"><%= product[:link_text] %></button>
+              <% end %>
+            <% else %>
               <button class="portfolio-main-p_product_button"><%= product[:link_text] %></button>
             <% end %>
           </div>
