--- a/app/views/shared/portfolio/_footer.html.erb
+++ b/app/views/shared/portfolio/_footer.html.erb
@@ -13,7 +13,7 @@
       <div class="portfolio-footer-c_items_title">Products</div>
       <ul>
         <li class="portfolio-footer-c_item"><%= link_to "BTNG", products_btng_path %></li>
-        <li class="portfolio-footer-c_item"><a href="#">mkidea</a></li>
+        <li class="portfolio-footer-c_item"><a href="https://mkidea.jp/">mkidea</a></li>
         <li class="portfolio-footer-c_item"><%= link_to "Booklist", "#" %></li>
         <li class="portfolio-footer-c_item"><%= link_to "Original Character", "#" %></li>
       </ul>
@@ -22,15 +22,15 @@
     <div class="portfolio-footer-c_items">
       <div class="portfolio-footer-c_items_title">Social</div>
       <ul>
-        <li class="portfolio-footer-c_item"><a href="#">Teitter</a></li>
-        <li class="portfolio-footer-c_item"><a href="#">Bookmeter</a></li>
-        <li class="portfolio-footer-c_item"><a href="#">Jognote</a><li/>
+        <li class="portfolio-footer-c_item"><a href="https://twitter.com/okaryo_tr">Teitter</a></li>
+        <li class="portfolio-footer-c_item"><a href="https://bookmeter.com/users/739784">Bookmeter</a></li>
+        <li class="portfolio-footer-c_item"><a href="http://www.jognote.com/users/436622">Jognote</a><li/>
         <li class="portfolio-footer-c_item"><%= link_to "Blog", blog_articles_path %><li/>
-        <li class="portfolio-footer-c_item"><a href="#">Podcast</a><li/>
-        <li class="portfolio-footer-c_item"><a href="#">Github</a><li/>
-        <li class="portfolio-footer-c_item"><a href="#">Qiita</a><li/>
-        <li class="portfolio-footer-c_item"><a href="#">AtCoder</a><li/>
-        <li class="portfolio-footer-c_item"><a href="#">Wish List</a><li/>
+        <li class="portfolio-footer-c_item"><a href="https://anchor.fm/booking-talk">Podcast</a><li/>
+        <li class="portfolio-footer-c_item"><a href="https://github.com/okaryo">Github</a><li/>
+        <li class="portfolio-footer-c_item"><a href="https://qiita.com/okaryo">Qiita</a><li/>
+        <li class="portfolio-footer-c_item"><a href="https://atcoder.jp/users/okaryo">AtCoder</a><li/>
+        <li class="portfolio-footer-c_item"><a href="https://www.amazon.jp/hz/wishlist/ls/3F7T4Z1GG7ORH?ref_=wl_share">Wish List</a><li/>
       </ul>
     </div>
   </div>
